Well... Final maybe it is not final

--- a/G-2301-01-P2/man/man3/G-2301-01-P2-ccomm.c.3
+++ b/G-2301-01-P2/man/man3/G-2301-01-P2-ccomm.c.3
@@ -2,9 +2,7 @@
 .ad l
 .nh
 .SH NAME
-srclib/G-2301-01-P2-ccomm.c \- 
-.PP
-Libreria de manejo de mensajes IRC\&.  
+srclib/G-2301-01-P2-ccomm.c \- Libreria de manejo de mensajes IRC\&.  
 
 .SH SYNOPSIS
 .br
@@ -15,13 +13,13 @@ Libreria de manejo de mensajes IRC\&.
 .br
 \fC#include <syslog\&.h>\fP
 .br
-\fC#include <G-2301-01-P1-tools\&.h>\fP
+\fC#include <G\-2301\-01\-P1\-tools\&.h>\fP
 .br
-\fC#include <G-2301-01-P1-tcp\&.h>\fP
+\fC#include <G\-2301\-01\-P1\-tcp\&.h>\fP
 .br
-\fC#include <G-2301-01-P2-client\&.h>\fP
+\fC#include <G\-2301\-01\-P2\-client\&.h>\fP
 .br
-\fC#include <G-2301-01-P2-ccomm\&.h>\fP
+\fC#include <G\-2301\-01\-P2\-ccomm\&.h>\fP
 .br
 
 .SS "Funciones"
@@ -220,10 +218,10 @@ Daniel Perdices daniel.perdices@estudiante.uam.es
 .PP
 
 .PP
-Definición en el archivo \fBG-2301-01-P2-ccomm\&.c\fP\&.
+Definición en el archivo \fBG\-2301\-01\-P2\-ccomm\&.c\fP\&.
 .SH "Documentación de las funciones"
 .PP 
-.SS "void cdefault (char *command)"
+.SS "void cdefault (char * command)"
 
 .PP
 Atiende el comando con una accion por defecto\&. 
@@ -235,8 +233,8 @@ Atiende el comando con una accion por defecto\&.
 .PP
 
 .PP
-Definición en la línea 88 del archivo G-2301-01-P2-ccomm\&.c\&.
-.SS "void cDoNothing (char *command)"
+Definición en la línea 88 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
+.SS "void cDoNothing (char * command)"
 
 .PP
 Ignora el comando\&. 
@@ -248,8 +246,8 @@ Ignora el comando\&.
 .PP
 
 .PP
-Definición en la línea 871 del archivo G-2301-01-P2-ccomm\&.c\&.
-.SS "void cErrBadChannelKey (char *command)"
+Definición en la línea 871 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
+.SS "void cErrBadChannelKey (char * command)"
 
 .PP
 Atiende el comando NICK\&. 
@@ -261,8 +259,8 @@ Atiende el comando NICK\&.
 .PP
 
 .PP
-Definición en la línea 670 del archivo G-2301-01-P2-ccomm\&.c\&.
-.SS "void cErrBannedFromChannel (char *command)"
+Definición en la línea 670 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
+.SS "void cErrBannedFromChannel (char * command)"
 
 .PP
 Atiende el comando ERR_BANNEDFROMCHANNEL\&. 
@@ -274,8 +272,8 @@ Atiende el comando ERR_BANNEDFROMCHANNEL\&.
 .PP
 
 .PP
-Definición en la línea 730 del archivo G-2301-01-P2-ccomm\&.c\&.
-.SS "void cErrChanOpPrivIsNeeded (char *command)"
+Definición en la línea 730 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
+.SS "void cErrChanOpPrivIsNeeded (char * command)"
 
 .PP
 Atiende el comando ERR_CHANOPPRIVISNEEDED\&. 
@@ -287,8 +285,8 @@ Atiende el comando ERR_CHANOPPRIVISNEEDED\&.
 .PP
 
 .PP
-Definición en la línea 586 del archivo G-2301-01-P2-ccomm\&.c\&.
-.SS "void cErrConnection (char *command)"
+Definición en la línea 586 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
+.SS "void cErrConnection (char * command)"
 
 .PP
 Atiende el comandos de error en la conexion\&. 
@@ -300,8 +298,8 @@ Atiende el comandos de error en la conexion\&.
 .PP
 
 .PP
-Definición en la línea 681 del archivo G-2301-01-P2-ccomm\&.c\&.
-.SS "void cErrNoSuchChannel (char *command)"
+Definición en la línea 681 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
+.SS "void cErrNoSuchChannel (char * command)"
 
 .PP
 Atiende el comando ERR_NOSUCHCHANNEL\&. 
@@ -313,8 +311,8 @@ Atiende el comando ERR_NOSUCHCHANNEL\&.
 .PP
 
 .PP
-Definición en la línea 710 del archivo G-2301-01-P2-ccomm\&.c\&.
-.SS "void cErrNoSuchNick (char *command)"
+Definición en la línea 710 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
+.SS "void cErrNoSuchNick (char * command)"
 
 .PP
 Atiende el comando ERR_NOSUCHNICK\&. 
@@ -326,8 +324,8 @@ Atiende el comando ERR_NOSUCHNICK\&.
 .PP
 
 .PP
-Definición en la línea 690 del archivo G-2301-01-P2-ccomm\&.c\&.
-.SS "void cJoin (char *command)"
+Definición en la línea 690 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
+.SS "void cJoin (char * command)"
 
 .PP
 Atiende el comando JOIN\&. 
@@ -339,10 +337,10 @@ Atiende el comando JOIN\&.
 .PP
 
 .PP
-Definición en la línea 132 del archivo G-2301-01-P2-ccomm\&.c\&.
+Definición en la línea 132 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
 .PP
 Hace referencia a client_socketsnd_thread()\&.
-.SS "void cKick (char *command)"
+.SS "void cKick (char * command)"
 
 .PP
 Atiende el comando KICK\&. 
@@ -354,8 +352,8 @@ Atiende el comando KICK\&.
 .PP
 
 .PP
-Definición en la línea 545 del archivo G-2301-01-P2-ccomm\&.c\&.
-.SS "void cMode (char *command)"
+Definición en la línea 545 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
+.SS "void cMode (char * command)"
 
 .PP
 Atiende el comando MODE\&. 
@@ -367,8 +365,8 @@ Atiende el comando MODE\&.
 .PP
 
 .PP
-Definición en la línea 778 del archivo G-2301-01-P2-ccomm\&.c\&.
-.SS "void cNick (char *command)"
+Definición en la línea 778 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
+.SS "void cNick (char * command)"
 
 .PP
 Atiende el comando NICK\&. 
@@ -380,8 +378,8 @@ Atiende el comando NICK\&.
 .PP
 
 .PP
-Definición en la línea 24 del archivo G-2301-01-P2-ccomm\&.c\&.
-.SS "void cNotice (char *command)"
+Definición en la línea 24 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
+.SS "void cNotice (char * command)"
 
 .PP
 Atiende el comando NOTICE\&. 
@@ -393,10 +391,10 @@ Atiende el comando NOTICE\&.
 .PP
 
 .PP
-Definición en la línea 638 del archivo G-2301-01-P2-ccomm\&.c\&.
+Definición en la línea 638 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
 .PP
 Hace referencia a rcvThread_file(), set_audio_host(), set_audio_port() y unlock_audio()\&.
-.SS "void cPart (char *command)"
+.SS "void cPart (char * command)"
 
 .PP
 Atiende el comando PART\&. 
@@ -408,8 +406,8 @@ Atiende el comando PART\&.
 .PP
 
 .PP
-Definición en la línea 443 del archivo G-2301-01-P2-ccomm\&.c\&.
-.SS "void cPing (char *command)"
+Definición en la línea 443 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
+.SS "void cPing (char * command)"
 
 .PP
 Atiende el comandoi PING\&. 
@@ -421,10 +419,10 @@ Atiende el comandoi PING\&.
 .PP
 
 .PP
-Definición en la línea 317 del archivo G-2301-01-P2-ccomm\&.c\&.
+Definición en la línea 317 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
 .PP
 Hace referencia a client_socketsnd_thread()\&.
-.SS "void cPrivMsg (char *command)"
+.SS "void cPrivMsg (char * command)"
 
 .PP
 Atiende el comando PRIVMSG\&. 
@@ -436,8 +434,8 @@ Atiende el comando PRIVMSG\&.
 .PP
 
 .PP
-Definición en la línea 165 del archivo G-2301-01-P2-ccomm\&.c\&.
-.SS "void cQuit (char *command)"
+Definición en la línea 165 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
+.SS "void cQuit (char * command)"
 
 .PP
 Atiende el comando QUIT\&. 
@@ -449,8 +447,8 @@ Atiende el comando QUIT\&.
 .PP
 
 .PP
-Definición en la línea 751 del archivo G-2301-01-P2-ccomm\&.c\&.
-.SS "void cRplAway (char *command)"
+Definición en la línea 751 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
+.SS "void cRplAway (char * command)"
 
 .PP
 Atiende el comando RPL_AWAY\&. 
@@ -462,8 +460,8 @@ Atiende el comando RPL_AWAY\&.
 .PP
 
 .PP
-Definición en la línea 477 del archivo G-2301-01-P2-ccomm\&.c\&.
-.SS "void cRplChannelModeIs (char *command)"
+Definición en la línea 477 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
+.SS "void cRplChannelModeIs (char * command)"
 
 .PP
 Atiende el comando RPL_CHANNELMODEIS\&. 
@@ -475,8 +473,8 @@ Atiende el comando RPL_CHANNELMODEIS\&.
 .PP
 
 .PP
-Definición en la línea 853 del archivo G-2301-01-P2-ccomm\&.c\&.
-.SS "void cRplEndOfMotd (char *command)"
+Definición en la línea 853 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
+.SS "void cRplEndOfMotd (char * command)"
 
 .PP
 Atiende el comando RPL_ENDOFMOTD\&. 
@@ -488,7 +486,7 @@ Atiende el comando RPL_ENDOFMOTD\&.
 .PP
 
 .PP
-Definición en la línea 74 del archivo G-2301-01-P2-ccomm\&.c\&.
+Definición en la línea 74 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
 .SS "void cRplEndOfNames ()"
 
 .PP
@@ -501,8 +499,8 @@ Atiende el comando RPL_ENDOFNAMES\&.
 .PP
 
 .PP
-Definición en la línea 537 del archivo G-2301-01-P2-ccomm\&.c\&.
-.SS "void cRplEndOfWho (char *command)"
+Definición en la línea 537 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
+.SS "void cRplEndOfWho (char * command)"
 
 .PP
 Atiende el comando RPL_ENDOFWHO\&. 
@@ -514,8 +512,8 @@ Atiende el comando RPL_ENDOFWHO\&.
 .PP
 
 .PP
-Definición en la línea 600 del archivo G-2301-01-P2-ccomm\&.c\&.
-.SS "void cRplEndOfWhois (char *command)"
+Definición en la línea 600 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
+.SS "void cRplEndOfWhois (char * command)"
 
 .PP
 Atiende el comando RPL_ENDOFWHOIS\&. 
@@ -527,8 +525,8 @@ Atiende el comando RPL_ENDOFWHOIS\&.
 .PP
 
 .PP
-Definición en la línea 285 del archivo G-2301-01-P2-ccomm\&.c\&.
-.SS "void cRplList (char *command)"
+Definición en la línea 285 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
+.SS "void cRplList (char * command)"
 
 .PP
 Atiende el comando RPL_LIST\&. 
@@ -540,8 +538,8 @@ Atiende el comando RPL_LIST\&.
 .PP
 
 .PP
-Definición en la línea 101 del archivo G-2301-01-P2-ccomm\&.c\&.
-.SS "void cRplListEnd (char *command)"
+Definición en la línea 101 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
+.SS "void cRplListEnd (char * command)"
 
 .PP
 Atiende el comando RPL_LISTEND\&. 
@@ -553,8 +551,8 @@ Atiende el comando RPL_LISTEND\&.
 .PP
 
 .PP
-Definición en la línea 119 del archivo G-2301-01-P2-ccomm\&.c\&.
-.SS "void cRplMotd (char *command)"
+Definición en la línea 119 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
+.SS "void cRplMotd (char * command)"
 
 .PP
 Atiende el comando RPL_MOTD\&. 
@@ -566,8 +564,8 @@ Atiende el comando RPL_MOTD\&.
 .PP
 
 .PP
-Definición en la línea 60 del archivo G-2301-01-P2-ccomm\&.c\&.
-.SS "void cRplMotdStart (char *command)"
+Definición en la línea 60 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
+.SS "void cRplMotdStart (char * command)"
 
 .PP
 Atiende el comando RPL_MOTDSTART\&. 
@@ -579,8 +577,8 @@ Atiende el comando RPL_MOTDSTART\&.
 .PP
 
 .PP
-Definición en la línea 376 del archivo G-2301-01-P2-ccomm\&.c\&.
-.SS "void cRplNamReply (char *command)"
+Definición en la línea 376 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
+.SS "void cRplNamReply (char * command)"
 
 .PP
 Atiende el comando RPL_NAMREPLY\&. 
@@ -592,8 +590,8 @@ Atiende el comando RPL_NAMREPLY\&.
 .PP
 
 .PP
-Definición en la línea 384 del archivo G-2301-01-P2-ccomm\&.c\&.
-.SS "void cRplNoTopic (char *command)"
+Definición en la línea 384 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
+.SS "void cRplNoTopic (char * command)"
 
 .PP
 Atiende el comando RPL_NOTOPIC\&. 
@@ -605,8 +603,8 @@ Atiende el comando RPL_NOTOPIC\&.
 .PP
 
 .PP
-Definición en la línea 520 del archivo G-2301-01-P2-ccomm\&.c\&.
-.SS "void cRplNowAway (char *command)"
+Definición en la línea 520 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
+.SS "void cRplNowAway (char * command)"
 
 .PP
 Atiende el comando RPL_NOWAWAY\&. 
@@ -618,8 +616,8 @@ Atiende el comando RPL_NOWAWAY\&.
 .PP
 
 .PP
-Definición en la línea 493 del archivo G-2301-01-P2-ccomm\&.c\&.
-.SS "void cRplTopic (char *command)"
+Definición en la línea 493 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
+.SS "void cRplTopic (char * command)"
 
 .PP
 Atiende el comando RPL_TOPIC\&. 
@@ -631,8 +629,8 @@ Atiende el comando RPL_TOPIC\&.
 .PP
 
 .PP
-Definición en la línea 337 del archivo G-2301-01-P2-ccomm\&.c\&.
-.SS "void cRplTopicWhoTime (char *command)"
+Definición en la línea 337 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
+.SS "void cRplTopicWhoTime (char * command)"
 
 .PP
 Atiende el comando RPL_TOPICWHOTIME\&. 
@@ -644,8 +642,8 @@ Atiende el comando RPL_TOPICWHOTIME\&.
 .PP
 
 .PP
-Definición en la línea 353 del archivo G-2301-01-P2-ccomm\&.c\&.
-.SS "void cRplUnAway (char *command)"
+Definición en la línea 353 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
+.SS "void cRplUnAway (char * command)"
 
 .PP
 Atiende el comando RPL_UNAWAY\&. 
@@ -657,8 +655,8 @@ Atiende el comando RPL_UNAWAY\&.
 .PP
 
 .PP
-Definición en la línea 509 del archivo G-2301-01-P2-ccomm\&.c\&.
-.SS "void cRplWelcome (char *command)"
+Definición en la línea 509 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
+.SS "void cRplWelcome (char * command)"
 
 .PP
 Atiende el comando RPL_WELCOME\&. 
@@ -670,8 +668,8 @@ Atiende el comando RPL_WELCOME\&.
 .PP
 
 .PP
-Definición en la línea 361 del archivo G-2301-01-P2-ccomm\&.c\&.
-.SS "void cRplWhoisChannels (char *command)"
+Definición en la línea 361 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
+.SS "void cRplWhoisChannels (char * command)"
 
 .PP
 Atiende el comando RPL_WHOISCHANNELS\&. 
@@ -683,8 +681,8 @@ Atiende el comando RPL_WHOISCHANNELS\&.
 .PP
 
 .PP
-Definición en la línea 212 del archivo G-2301-01-P2-ccomm\&.c\&.
-.SS "void cRplWhoisIdle (char *command)"
+Definición en la línea 212 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
+.SS "void cRplWhoisIdle (char * command)"
 
 .PP
 Atiende el comando RPL_WHOISIDLE\&. 
@@ -696,8 +694,8 @@ Atiende el comando RPL_WHOISIDLE\&.
 .PP
 
 .PP
-Definición en la línea 265 del archivo G-2301-01-P2-ccomm\&.c\&.
-.SS "void cRplWhoisOperator (char *command)"
+Definición en la línea 265 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
+.SS "void cRplWhoisOperator (char * command)"
 
 .PP
 Atiende el comando RPL_WHOISOPERATOR\&. 
@@ -709,8 +707,8 @@ Atiende el comando RPL_WHOISOPERATOR\&.
 .PP
 
 .PP
-Definición en la línea 230 del archivo G-2301-01-P2-ccomm\&.c\&.
-.SS "void cRplWhoisServer (char *command)"
+Definición en la línea 230 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
+.SS "void cRplWhoisServer (char * command)"
 
 .PP
 Atiende el comando RPL_WHOISSERVER\&. 
@@ -722,8 +720,8 @@ Atiende el comando RPL_WHOISSERVER\&.
 .PP
 
 .PP
-Definición en la línea 246 del archivo G-2301-01-P2-ccomm\&.c\&.
-.SS "void cRplWhoisUser (char *command)"
+Definición en la línea 246 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
+.SS "void cRplWhoisUser (char * command)"
 
 .PP
 Atiende el comando RPL_WHOISUSER\&. 
@@ -735,8 +733,8 @@ Atiende el comando RPL_WHOISUSER\&.
 .PP
 
 .PP
-Definición en la línea 191 del archivo G-2301-01-P2-ccomm\&.c\&.
-.SS "void cRplWhoReply (char *command)"
+Definición en la línea 191 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
+.SS "void cRplWhoReply (char * command)"
 
 .PP
 Atiende el comando RPL_WHORPLY\&. 
@@ -748,8 +746,8 @@ Atiende el comando RPL_WHORPLY\&.
 .PP
 
 .PP
-Definición en la línea 419 del archivo G-2301-01-P2-ccomm\&.c\&.
-.SS "void cTopic (char *command)"
+Definición en la línea 419 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
+.SS "void cTopic (char * command)"
 
 .PP
 Atiende el comando TOPIC\&. 
@@ -761,8 +759,8 @@ Atiende el comando TOPIC\&.
 .PP
 
 .PP
-Definición en la línea 302 del archivo G-2301-01-P2-ccomm\&.c\&.
-.SS "void* rcvThread_file (void *msg)"
+Definición en la línea 302 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
+.SS "void* rcvThread_file (void * msg)"
 
 .PP
 Hilo de recepcion del fichero\&. 
@@ -774,7 +772,7 @@ Hilo de recepcion del fichero\&.
 .PP
 
 .PP
-Definición en la línea 608 del archivo G-2301-01-P2-ccomm\&.c\&.
+Definición en la línea 608 del archivo G\-2301\-01\-P2\-ccomm\&.c\&.
 .PP
 Hace referencia a client_tcpsocket_open(), tcpsocket_close() y tcpsocket_rcv()\&.
 .SH "Autor"
