--- a/G-2301-01-P2/man/man3/xchat2.c.3
+++ b/G-2301-01-P2/man/man3/xchat2.c.3
@@ -2,25 +2,24 @@
 .ad l
 .nh
 .SH NAME
-src/xchat2.c \- 
-Programa principal del cliente IRC\&.  
+src/xchat2.c \- Programa principal del cliente IRC\&.  
 
 .SH SYNOPSIS
 .br
 .PP
 \fC#include <redes2/ircxchat\&.h>\fP
 .br
-\fC#include <G-2301-01-P2-client\&.h>\fP
+\fC#include <G\-2301\-01\-P2\-client\&.h>\fP
 .br
-\fC#include <G-2301-01-P2-ucomm\&.h>\fP
+\fC#include <G\-2301\-01\-P2\-ucomm\&.h>\fP
 .br
-\fC#include <G-2301-01-P2-ccomm\&.h>\fP
+\fC#include <G\-2301\-01\-P2\-ccomm\&.h>\fP
 .br
-\fC#include <G-2301-01-P1-tools\&.h>\fP
+\fC#include <G\-2301\-01\-P1\-tools\&.h>\fP
 .br
-\fC#include <G-2301-01-P1-tcp\&.h>\fP
+\fC#include <G\-2301\-01\-P1\-tcp\&.h>\fP
 .br
-\fC#include <G-2301-01-P2-rtp\&.h>\fP
+\fC#include <G\-2301\-01\-P2\-rtp\&.h>\fP
 .br
 \fC#include <syslog\&.h>\fP
 .br
@@ -141,7 +140,7 @@ Daniel Perdices daniel.perdices@estudiante.uam.es
 Definición en el archivo \fBxchat2\&.c\fP\&.
 .SH "Documentación de las funciones"
 .PP 
-.SS "int _client_socketrcv (char *msg, size_tsize)"
+.SS "int _client_socketrcv (char * msg, size_t size)"
 
 .PP
 Recibe el comando en msg\&. 
@@ -163,7 +162,7 @@ Ningun valor concreto
 Definición en la línea 153 del archivo xchat2\&.c\&.
 .PP
 Hace referencia a tcpsocket_rcv()\&.
-.SS "int _client_socketsnd (char *msg)"
+.SS "int _client_socketsnd (char * msg)"
 
 .PP
 Envia el comando del cliente\&. Es segura para concurrencia\&. 
@@ -183,7 +182,7 @@ Ningun valor concreto
 Definición en la línea 140 del archivo xchat2\&.c\&.
 .PP
 Hace referencia a tcpsocket_snd()\&.
-.SS "void* audiorcv_t (void *d)"
+.SS "void* audiorcv_t (void * d)"
 
 .PP
 Recibe y reproduce audio para la funcionalidad de chat de voz\&. 
@@ -202,8 +201,8 @@ NULL
 .PP
 Definición en la línea 1244 del archivo xchat2\&.c\&.
 .PP
-Hace referencia a rtp_rcvpkg()\&.
-.SS "void* audiosnd_t (void *d)"
+Hace referencia a audiosnd_t(), client_socketsnd(), client_tcpsocket_open(), disconnect_client(), get_uhost(), get_unick(), rcv_thread() y rtp_rcvpkg()\&.
+.SS "void* audiosnd_t (void * d)"
 
 .PP
 Graba y envia audio para la funcionalidad de chat de voz\&. 
@@ -223,7 +222,7 @@ NULL
 Definición en la línea 1222 del archivo xchat2\&.c\&.
 .PP
 Hace referencia a rtp_sndpkg()\&.
-.SS "int client_socketrcv (char *msg, size_tsize)"
+.SS "int client_socketrcv (char * msg, size_t size)"
 
 .PP
 Recibe el comando en msg\&. 
@@ -245,7 +244,7 @@ Ningun valor concreto
 Definición en la línea 187 del archivo xchat2\&.c\&.
 .PP
 Hace referencia a _client_socketrcv()\&.
-.SS "int client_socketrcv_thread (char *msg, size_tsize)"
+.SS "int client_socketrcv_thread (char * msg, size_t size)"
 
 .PP
 Recibe el comando en msg\&. 
@@ -266,8 +265,8 @@ Ningun valor concreto
 .PP
 Definición en la línea 200 del archivo xchat2\&.c\&.
 .PP
-Hace referencia a _client_socketrcv()\&.
-.SS "int client_socketsnd (char *msg)"
+Hace referencia a _client_socketrcv(), client_socketsnd() y get_unick()\&.
+.SS "int client_socketsnd (char * msg)"
 
 .PP
 Envia el comando del cliente\&. Es segura para concurrencia\&. 
@@ -287,7 +286,7 @@ Ningun valor concreto
 Definición en la línea 166 del archivo xchat2\&.c\&.
 .PP
 Hace referencia a _client_socketsnd()\&.
-.SS "int client_socketsnd_thread (char *msg)"
+.SS "int client_socketsnd_thread (char * msg)"
 
 .PP
 Envia el comando del cliente\&. Es segura para concurrencia y es la version para ser llamada desde hilos\&. 
@@ -327,7 +326,7 @@ NULL
 Definición en la línea 1542 del archivo xchat2\&.c\&.
 .PP
 Hace referencia a tcpsocket_close()\&.
-.SS "void* fileThread (void *d)"
+.SS "void* fileThread (void * d)"
 
 .PP
 El hilo del envio de fichero\&. 
@@ -346,7 +345,7 @@ NULL
 .PP
 Definición en la línea 1144 del archivo xchat2\&.c\&.
 .PP
-Hace referencia a tcpsocket_accept() y tcpsocket_snd()\&.
+Hace referencia a client_socketsnd(), get_uhost(), get_unick(), tcpsocket_accept() y tcpsocket_snd()\&.
 .SS "char* get_uhost ()"
 
 .PP
@@ -373,7 +372,7 @@ el nick
 
 .PP
 Definición en la línea 52 del archivo xchat2\&.c\&.
-.SS "int main (intargc, char *argv[])"
+.SS "int main (int argc, char * argv[])"
 
 .PP
 : Funcion principal del programa MMMMMMMMMM MMMMM AAAAAAA IIIIIII NNNNNNNNNN NNNNNN MMMMMMMMMM MMMMM AAAAAAAA IIIII NNNNNNNNNN NNNN MMMMM MMMM MM MM AAAAA AA III NNNNN NNNN NN MMMMM MMMM MM MM AAAAA AA III NNNNN NNNN NN MMMMM MMMM MM MM AAAAA AA III NNNNN NNNN NN MMMMM MMMM MM MM AAAAA AA III NNNNN NNNN NN MMMMM MMMM MM MM AAAAA AA III NNNNN NNNN NN MMMMM MMMM MM MM AAAAAAAAAAAAAA III NNNNN NNNN NN MMMMM MMMMM MM AAAAA AA III NNNNN NNNN NN MMMMM MMM MM AAAAA AA III NNNNN NNNN NN MMMMM MM AAAAA AA III NNNNN NNNN NN MMMMM MM AAAAA AA III NNNNN NNNN NN MMMMMMM MMMM AAAAAA AAAA IIIII NNNNNN NNNNNNN MMMMMMMMM MMMMMM AAAAAAAA AAAAAA IIIIIII NNNNNNN NNNNNNN 
@@ -395,7 +394,7 @@ Definición en la línea 52 del archivo xchat2\&.c\&.
 Definición en la línea 1599 del archivo xchat2\&.c\&.
 .PP
 Hace referencia a init_ccomm() y timeout_t()\&.
-.SS "void* rcv_thread (void *d)"
+.SS "void* rcv_thread (void * d)"
 
 .PP
 Recibe y atiende comandos IRC\&. 
@@ -415,7 +414,7 @@ NULL
 Definición en la línea 1510 del archivo xchat2\&.c\&.
 .PP
 Hace referencia a cdefault() y client_socketrcv_thread()\&.
-.SS "void set_audio_host (char *c)"
+.SS "void set_audio_host (char * c)"
 
 .PP
 Configura el host destino de la comunicacion de audio\&. 
@@ -428,7 +427,7 @@ Configura el host destino de la comunicacion de audio\&.
 
 .PP
 Definición en la línea 67 del archivo xchat2\&.c\&.
-.SS "void set_audio_port (unsigned longp)"
+.SS "void set_audio_port (unsigned long p)"
 
 .PP
 Configura el puerto destino de la comunicacion de audio\&. 
@@ -441,7 +440,7 @@ Configura el puerto destino de la comunicacion de audio\&.
 
 .PP
 Definición en la línea 75 del archivo xchat2\&.c\&.
-.SS "void* timeout_t (void *a)"
+.SS "void* timeout_t (void * a)"
 
 .PP
 Hilo de timeout\&. 
